--- a/MVVMTemplate/app/src/main/res/values/strings.xml
+++ b/MVVMTemplate/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="main_fragment">Hi, I am the main fragment</string>
+    <string name="nav_header_title">Demo Drawer</string>
+    <string name="nav_header_sub_title">mvvmtemplate@example.com</string>
 </resources>
